2006-06-15  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended to allow the specification of a module M as
	  either M or modules/M. The latter is a path relative to the
	  topdir and enables the entering of modules through
	  tab-completion in the shell.

2006-05-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'base32'.

2006-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'transfer'.

2006-04-26  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (gd-gen-tap): modified to strip non-version characters
	  out of version numbers.

2006-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Removed the definitions of the common test constraints,
	  and the emulations of the 'wrongNumArgs' and 'tooManyArgs'
	  commands. These have all moved into the new common test support
	  code found in "devtools".

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Removed all functionality related to execution of
	  .timing files. They are superceded by the benchmarks provided
	  through .bench files.

	* modules/aes/aes.timing: Removed, superceded by .bench files.
	* modules/des/des.timing:
	* modules/rc4/rc4.timing:
	* modules/blowfish/blowfish.timing

2005-11-02  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (ppackages): Added hack to exclude the package @@ from
	  the tap file. This is defined in template code in
	  page/gen_peg_cpkg.tcl, i.e. a variable.

2005-10-27  Andreas Kupries <andreask@activestate.com>

	* sak.tcl (bench_mod): Modified default interp to use in
	  benchmarks from PATH to the interp executing SAK.

2005-10-21  Andreas Kupries <andreask@activestate.com>

	* sak.tcl: Extended benchmark facility. New command for removal of
	  columns from results. New option to explicitly specify a single
	  interpreter to use.

2005-10-18  Andreas Kupries <andreask@activestate.com>
